--- a/index.html
+++ b/index.html
@@ -112,25 +112,25 @@
     <div class="side">
         <h2>Acerca de mi</h2>
         <h5>Mi foto</h5>
-        <div class="" style="height: 200px;"><img src="ft/IMG_9555.jpeg" alt="mujer" width="150"></div>
+        <div class="" style="height: 200px;"><img src="IMG_9555.jpeg" alt="mujer" width="150"></div>
         <p>tengo 17 años de edad</p>
         <h3>Hobbies</h3>
         <p>Desde chiquta me ha gustado realizar actividades creativas  como hacer manualidades, pintar y cocinar.</p>
-        <div class="" style="height: 60px;"><img src="ft/pintura-og.webp" alt="pintura" width="120"></div>
-        <div class="" style="height: 60px;"><img src="ft/manualidades-cartulina.webp" alt="manualidades" width="120"></div>
-        <div class="" style="height: 60px;"><img src="ft/fotonoticia_20181010083733_690.jpg" alt="cocinar" width="120"></div>
+        <div class="" style="height: 60px;"><img src="pintura-og.webp" alt="pintura" width="120"></div>
+        <div class="" style="height: 60px;"><img src="manualidades-cartulina.webp" alt="manualidades" width="120"></div>
+        <div class="" style="height: 60px;"><img src="fotonoticia_20181010083733_690.jpg" alt="cocinar" width="120"></div>
     </div>
 
     <div class="main">
         <h2>Fecha y lugar de nacimiento</h2>
         <h5>Naci el 8 de diciembre del 2007 en Republica Dominicana, Santo Domingo</h5>
-        <div class="" style="height: 200px;"><img src="ft/Flag_of_the_Dominican_Republic.svg.webp" alt="domi" width="160"></div>
+        <div class="" style="height: 200px;"><img src="Flag_of_the_Dominican_Republic.svg.webp" alt="domi" width="160"></div>
        
         <p>Mi país, la República Dominicana, es un lugar que llevo en el corazón. Sus playas, montañas y la calidez de su gente me llenan de orgullo. Cada rincón de esta tierra refleja mi identidad y siempre me siento agradecido por ser parte de ella.</p>
         <br>
         <h2>Profesión soñada</h2>
         <h5>Mi Carrera soñada es ser odontologa y estudiar en la Universidad UNIBE</h5>
-        <div class="" style="height: 200px;"><img src="ft/Universidad-Iberoamericana-UNIBE.jpg" alt="u" width="200"></div>
+        <div class="" style="height: 200px;"><img src="Universidad-Iberoamericana-UNIBE.jpg" alt="u" width="200"></div>
         <p></p>
         <p>Aspiro a crecer y forjar mi camino como una odontóloga apasionada y comprometida, brindando ayuda a los demás e impactando positivamente en sus vidas, superando desafíos y aprendiendo de cada experiencia.</p> 
     </div>
